--- a/custom/library_app/views/book_view.xml
+++ b/custom/library_app/views/book_view.xml
@@ -25,4 +25,27 @@
     </record>
 
 
+    <record id="view_tree_book" model="ir.ui.view">
+            <field name="name">Tree View</field>
+            <field name="model">library.book</field>
+            <field name="arch" type="xml">
+                <tree>
+
+                    <field name="name"/>
+                    <field name="isbn"/>
+                    <field name="image" widget="image" options="{'size':[45,45]}"/>
+                    <field name="date_published"/>
+                    
+                    
+                </tree>
+            </field>
+        </record>
+
+    
+
+
+
+
+
+
 </odoo>
