added tags and property

--- a/custom_addons/real_estate_ads/views/menu_items.xml
+++ b/custom_addons/real_estate_ads/views/menu_items.xml
@@ -3,8 +3,13 @@
  <menuitem name="Property Ads" id="menu_root_property_ads" web_icon="real_estate_ads,static/description/icon.png">
      
        <menuitem id="menu_property_ads" name="Ads">
-          <menuitem id="menu_property" name="Property" action="action_property"/>
+          <menuitem id="menu_property" name="Property" action="real_estate_ads.action_property"/>
        </menuitem>
+
+        <menuitem id="menu_property_settings" name="Settings">
+          <menuitem id="menu_property_type" name="Property Types" action="real_estate_ads.action_property_type"/>
+          <menuitem id="menu_property_tag" name="Property Tag" action="real_estate_ads.action_property_tag"/>
+       </menuitem> 
  </menuitem>
 
 </odoo>
