--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -23,7 +23,9 @@
                     <sheet>
                         <group>
                             <field name="name"/>
+                            <field name="tag_ids" widget="many2many_tags"/>
                             <group>
+                                <field name="type_id"/>
                                 <field name="postcode"/>
                                 <field name="date_availability"/>
                             </group>
