added computed field

--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -48,6 +48,7 @@
                                     <field name='garden'/>
                                     <field name='garden_area'/>
                                     <field name='garden_orientaion'/>
+                                    <field name="total_area"/>
                                 </group>
                             </page>
                             <page string="Offers">
@@ -58,6 +59,7 @@
                                         <field name="partner_id"/>
                                         <field name="validity"/>
                                         <field name="deadline"/>
+                                        <field name="creation_date"/>
                                     </tree>
                                 </field>
                             </page>
