added related field

--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -67,6 +67,7 @@
                               <group>
                                    <field name="sales_id"/>
                                    <field name="buyer_id"/>
+                                   <field name="phone"/>
                             
                               </group>
 
