--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -22,12 +22,18 @@
             <field name="model">estate.property</field>
             <field name="arch" type="xml">
                 <form>
+                <header> 
+                    <button name="action_sold"  type ="object" string="Sold"/>
+                    <button name="action_cancel"  type ="object" string="Cancel"/>
+                    <field name="state" widget="statusbar"/>
+                </header>
                     <sheet>
                         <group>
                             <field name="name"/>
                             <field name="tag_ids" widget="many2many_tags"/>
                             <group>
                                 <field name="type_id"/>
+                                <field name="state"/>
                                 <field name="postcode"/>
                                 <field name="date_availability"/>
                             </group>
