--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -1,5 +1,15 @@
 <odoo>
     <data>
+
+
+
+       <record id="action_property_view_offers" model="ir.actions.act_window">
+            <field name="name">Property</field>
+            <field name="res_model">estate.property.offer</field>
+            <field name="view_mode">tree,form</field>
+            <field name="domain"> [('property_id', '=', active_id)] </field>
+           
+        </record>
         <!-- Tree View -->
         <record id="estate_property_tree_view" model="ir.ui.view">
             <field name="name">estate.property.tree</field>
@@ -28,6 +38,12 @@
                     <field name="state" widget="statusbar"/>
                 </header>
                     <sheet>
+                     <div class="oe_button_box" name = "button_box">
+                        <button class="oe_start_button" name = "action_property_view_offers" type ="object">
+                           <field name="offer_count" string="Offers" widget="statinfo"/>
+                        </button>  
+                        
+                    </div> 
                         <group>
                             <field name="name"/>
                             <field name="tag_ids" widget="many2many_tags"/>
