--- a/custom_addons/real_estate_ads/views/property_tag.xml
+++ b/custom_addons/real_estate_ads/views/property_tag.xml
@@ -19,6 +19,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
+                            <field name="color" invisible="1"/>
                             
                         </group>
                     </sheet>
