--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -39,14 +39,14 @@
                 </header>
                     <sheet>
                      <div class="oe_button_box" name = "button_box">
-                        <button class="oe_start_button" name = "action_property_view_offers" type ="object">
-                           <field name="offer_count" string="Offers" widget="statinfo"/>
-                        </button>  
+                        <button class="oe_stat_button" name="action_property_view_offers" type="object" icon="fa-handshake-o">
+                                <field name="offer_count" string="Offers" widget="statinfo"/>
+                            </button>
                         
                     </div> 
                         <group>
                             <field name="name"/>
-                            <field name="tag_ids" widget="many2many_tags"/>
+                              <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                             <group>
                                 <field name="type_id"/>
                                 <field name="state"/>
@@ -77,11 +77,14 @@
                                 <field name="offer_ids">
                                     <tree editable="bottom">
                                         <field name="price"/>
-                                        <field name="status" nolable="1"/>
+                                        
                                         <field name="partner_id"/>
                                         <field name="validity"/>
                                         <field name="deadline"/>
                                         <field name="creation_date"/>
+                                         <field name="status" readonly="1"/>
+                                        <button name="action_accept_offer" type="object" icon="fa-check" string="Accept"/>
+                                        <button name="action_decline_offer" type="object" icon="fa-times" string="Decline"/>
                                     </tree>
                                 </field>
                             </page>
