--- a/custom_addons/real_estate_ads/views/property_offer_view.xml
+++ b/custom_addons/real_estate_ads/views/property_offer_view.xml
@@ -4,7 +4,8 @@
             <field name="name">estate.property.offer.tree</field>
             <field name="model">estate.property.offer</field>
             <field name="arch" type="xml">
-                <tree>
+                <tree decoration-success="status == 'accepted'" decoration-danger="status == 'refused'">
+
                     <field name="price"/>
                     <field name="status"/>
                     <field name="partner_id"/>
