--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -68,14 +68,14 @@
                                     <field name='facades'/>
                                     <field name='garage'/>
                                     <field name='garden'/>
-                                    <field name='garden_area'/>
-                                    <field name='garden_orientaion'/>
+                                    <field name="garden_area" attrs="{'invisible': [('garden', '=', False)]}"/>
+                                    <field name="garden_orientaion" attrs="{'invisible': [('garden', '=', False)]}"/>
                                     <field name="total_area"/>
                                 </group>
                             </page>
                             <page string="Offers">
                                 <field name="offer_ids">
-                                    <tree editable="bottom">
+                                     <tree editable="bottom" decoration-success="status == 'accepted'" decoration-danger="status == 'refused'">
                                         <field name="price"/>
                                         
                                         <field name="partner_id"/>
