added filter and search filter

--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -8,6 +8,27 @@
             <field name="res_model">estate.property.offer</field>
             <field name="view_mode">tree,form</field>
             <field name="domain"> [('property_id', '=', active_id)] </field>
+        
+         <record id="estate_property_search_view" model="ir.ui.view">
+            <field name="name">estate.property.search</field>
+            <field name="model">estate.property</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="name"/>
+                    <field name="state"/>
+                    <field name="postcode"/>
+                    <field name="buyer_id"/>
+                    <filter string="New" name="new_state" domain="[('state', '=', 'new')]"/>
+                    <filter string="Sold" name="sold_state" domain="[('state', '=', 'sold')]"/>
+                    <filter string="Received offer" name="received_state" domain="[('state', '=', 'received')]"/>
+                    <filter string="Accepted Offer" name="accepted_state" domain="[('state', '=', 'accepted')]"/>
+                    <separator/>
+                    <group expand="0" string="Group By">
+                        <filter string="Status" name="group_by_state" context="{'group_by': 'state'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
            
         </record>
         <!-- Tree View -->
@@ -25,6 +46,7 @@
                 </tree>
             </field>
         </record>
+
 
         <!-- Form View -->
         <record id="estate_property_form_view" model="ir.ui.view">
