--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -108,7 +108,7 @@
                     <field name="selling_price" type="measure"/>
                     <field name="expected_price" type="measure"/>
                     <field name="facades" type="measure"/>
-                    <field name="bedrooms" type="measure"/>
+                    <field name="bedrooms" type="col"/>
                 </pivot>
             </field>
         </record>
