added widgets and attrs

--- a/custom_addons/real_estate_ads/views/property_offer_view.xml
+++ b/custom_addons/real_estate_ads/views/property_offer_view.xml
@@ -13,7 +13,7 @@
              
                     <field name="validity"/>
                     <field name="creation_date"/>
-                    <field name="deadline"/>
+                    <field name="deadline" widget="ramaining_days"/>
                   
                 </tree>
             </field>
