--- a/custom_addons/real_estate_ads/views/property_tag.xml
+++ b/custom_addons/real_estate_ads/views/property_tag.xml
@@ -6,6 +6,8 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+
+                    <field name="color" widget="color_picker"/>
                   
                 </tree>
             </field>
@@ -19,7 +21,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
-                            <field name="color" invisible="1"/>
+                            <field name="color" widget="color_picker"/>
                             
                         </group>
                     </sheet>
