added server actions

--- a/custom_addons/real_estate_ads/views/property_view.xml
+++ b/custom_addons/real_estate_ads/views/property_view.xml
@@ -237,5 +237,17 @@
             </field>
         </record>
         
+         <record id="action_extend_offer_deadline" model="ir.actions.server">
+            <field name="name">Extend Deadline</field>
+            <field name="model_id" ref="real_estate_ads.model_estate_property_offer"/>
+            <field name="state">code</field>
+            <field name="binding_model_id" ref="real_estate_ads.model_estate_property_offer"/>
+            <field name="binding_view_types">list,form</field>
+            <field name="code">
+                action = model.extend_offer_deadline()
+            </field>
+        </record>
+
+
     </data>
 </odoo>
